--- a/ms-commandes.yml
+++ b/ms-commandes.yml
@@ -1,9 +1,14 @@
 server:
-  port: 0
+  port: 0 # Keeps dynamic port allocation if desired
 
 spring:
   datasource:
-    url: jdbc:h2:mem:commandesdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://localhost:3306/ms_commandes_db?useSSL=false&serverTimezone=UTC
+    username: root
+    password: Pewv44584691
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
