--- a/ms-interface.yml
+++ b/ms-interface.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ms-interface
+    name: MS-INTERFACE
   config:
     import: "optional:configserver:http://localhost:8888"  # URL du config server
 
